2018-05-30  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_loc_section): Use correct listptr for
	locview attribute.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_units): Check offset against -1 not ~0ul.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_loc_section): Handle GNU DebugFission list
	entries.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug): Record and reset section_info status in
	implicit_debug_sections and print_debug_sections.

2018-05-28  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_units): Turn "Could not find split compile
	unit" into an Warning instead of an error.

2018-04-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (parse_opt): Request implicit section_info for "str".
	(known_stroffbases): New static variable.
	(attr_callbackattr_callback): Handle DW_AT_str_offets_base.
	(print_debug_str_offsets_section): New function.
	(print_debug): Handle .debug_str_offsets as section_str. Reset
	known_stroffbases.

2018-04-27  Mark Wielaard  <mark@klomp.org>

	* readelf.c (options): Add addr.
	(enum section_e): Add section_addr.
	(section_all): Add section_addr.
	(parse_opt): Parse "addr".
	(known_addrbases): New static variable.
	(get_listptr): New function.
	(print_debug_addr_section): Likewise.
	(attr_callback): Handle DW_AT_addr_base and DW_AT_GNU_addr_base.
	(print_debug): Add NEW_SECTION (addr). Reset known_addrbases.

2018-04-07  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Handle DW_FORM_loclistx and
	DW_AT_segment.

2018-04-12  Mark Wielaard  <mark@klomp.org>

	* readelf.c (dwarf_loc_list_encoding_string): New functions.
	(dwarf_loc_list_encoding_name): Likewise.
	(known_loclistptr): Renamed and split in two...
	(known_locsptr): this and ...
	(known_loclistsptr): this.
	(listptr_base): Split out...
	(cudie_base): ...this.
	(is_split_dwarf): New function.
	(attr_callback): Handle DW_AT_loclists_base and notice sec_offset