@@ -1,3 +1,8 @@
+2018-05-31  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (attr_callback): Only register section_loc when not
+	looking at a split dwarf from a skeleton.
+
 2018-05-30  Mark Wielaard  <mark@klomp.org>
 
 	* readelf.c (print_debug_loc_section): Use correct listptr for
